--- a/style.css
+++ b/style.css
@@ -7,9 +7,40 @@ h1 {
 }
 
 .square {
+  position: relative;
   width: 100px;
   height: 100px;
   background-color: beige;
   border: 1px solid gray;
   display: inline-block;
+}
+
+.o {
+
+}
+
+.o::after {
+  position: absolute;
+  content: '\2B55';
+  font-size: 50px;
+  line-height: 100px;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+.x {
+
+}
+
+.x::after {
+  position: absolute;
+  content: '\274C';
+  font-size: 50px;
+  line-height: 100px;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
