--- a/styles/style.css
+++ b/styles/style.css
@@ -7,16 +7,16 @@ h1 {
 }
 
 .square {
-  position: relative;
   width: 100px;
   height: 100px;
   background-color: beige;
   border: 1px solid gray;
   display: inline-block;
+  position: relative;
 }
 
 .o {
-
+  /* position: relative; */
 }
 
 .o::after {
@@ -31,7 +31,7 @@ h1 {
 }
 
 .x {
-
+  /* position: relative; */
 }
 
 .x::after {
